Actualizados los autores

--- a/doc/Documentación.tex
+++ b/doc/Documentación.tex
@@ -15,7 +15,7 @@ hyperref=false, backref=false]{biblatex}
 % Preambulo del documento
 \title{Documentación del Proyecto I : EIF207 - Estructuras de datos}
 \shorttitle{Documentación del Proyecto I}
-\author{David Guevara y Mario Arguello}
+\author{\begin{center}David Guevara Sánchez \and Mario Arguello Borge\end{center}}
 \affiliation{Universidad Nacional}
 \note{II Ciclo 2019}
 
