--- a/doc/Documentación.tex
+++ b/doc/Documentación.tex
@@ -7,6 +7,8 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage[style=apa, backend=biber, sortcites=true, sorting=nyt,
 hyperref=false, backref=false]{biblatex}
+\usepackage{graphicx}
+\usepackage{float}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Comienzo del documento. %
@@ -15,7 +17,7 @@ hyperref=false, backref=false]{biblatex}
 % Preambulo del documento
 \title{Documentación del Proyecto I : EIF207 - Estructuras de datos}
 \shorttitle{Documentación del Proyecto I}
-\author{\begin{center}David Guevara Sánchez \and Mario Arguello Borge\end{center}}
+\author{David Guevara Sánchez y Mario Arguello Borge}
 \affiliation{Universidad Nacional}
 \note{II Ciclo 2019}
 
@@ -23,5 +25,6 @@ hyperref=false, backref=false]{biblatex}
 \begin{document}
 \thispagestyle{otherpage}
 \maketitle
+\input{tex/Contenido.tex}
 \end{document}
 
