Actualizada la documentación

--- a/doc/Documentación.tex
+++ b/doc/Documentación.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, man]{apa6}
+\documentclass[a4paper, man, floatsintext]{apa6}
 
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
@@ -25,6 +25,8 @@ hyperref=false, backref=false]{biblatex}
 \begin{document}
 \thispagestyle{otherpage}
 \maketitle
+\tableofcontents
+\newpage
 \input{tex/Contenido.tex}
 \end{document}
 
