--- a/doc/Documentación.tex
+++ b/doc/Documentación.tex
@@ -28,5 +28,8 @@ hyperref=false, backref=false]{biblatex}
 \tableofcontents
 \newpage
 \input{tex/Contenido.tex}
+\begin{appendix}
+	\listoffigures
+\end{appendix}
 \end{document}
 
